--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ionic-native/status-bar": "3.12.1",
     "@ionic/storage": "2.0.1",
     "@ngx-translate/core": "^8.0.0",
+    "@ngx-translate/http-loader": "^0.1.0",
     "angularfire2": "^4.0.0-rc.2",
     "cordova-android": "^6.2.3",
     "cordova-plugin-console": "^1.0.5",
